[tool.poetry]
name = "dirgh"
version = "0.1.2"
description = ""
authors = ["tiptenbrink <75669206+tiptenbrink@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.20.0"
trio = "^0.19.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
dirgh = "dirgh.cli:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
