[tool.poetry]
name = "dirgh"
version = "0.3.0"
description = "With dirgh you can easily download a directory from GitHub programmatically from Python or using the CLI."
authors = ["tiptenbrink <75669206+tiptenbrink@users.noreply.github.com>"]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
httpx = ">=0.23.0, < 0.26.0"
trio = ">= 0.20.0, < 0.23.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
dirgh = "dirgh.cli:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
